# pixi_tut_chsafouane_github_io

./: README.md  pyproject.toml
src/fastapi_app/: main.py
